# ECE574_Assignment3

./: .gitignore  CMakeLists.txt  FORCE_DIRECTED.m  README.md  README.txt
Matlab_code/: FORCE_DIRECTED.m  FORCE_DIRECTED_dot_cpp.m  FORCE_DIRECTED_dot_cpp.prj
Matlab_code/codegen/lib/FORCE_DIRECTED_dot_cpp/: FORCE_DIRECTED_dot_cpp.cpp  FORCE_DIRECTED_dot_cpp.h  FORCE_DIRECTED_dot_cpp_emxAPI.cpp  FORCE_DIRECTED_dot_cpp_emxAPI.h  FORCE_DIRECTED_dot_cpp_emxutil.cpp  FORCE_DIRECTED_dot_cpp_emxutil.h  FORCE_DIRECTED_dot_cpp_initialize.cpp  FORCE_DIRECTED_dot_cpp_initialize.h  FORCE_DIRECTED_dot_cpp_rtw.bat  FORCE_DIRECTED_dot_cpp_rtw.mk  FORCE_DIRECTED_dot_cpp_terminate.cpp  FORCE_DIRECTED_dot_cpp_terminate.h  FORCE_DIRECTED_dot_cpp_types.h  all.cpp  all.h  buildInfo.mat  codeInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Matlab_code/codegen/lib/FORCE_DIRECTED_dot_cpp/examples/: main.cpp  main.h
Matlab_code/codegen/lib/FORCE_DIRECTED_dot_cpp/html/: FORCE_DIRECTED_dot_cpp1_mcode.html  FORCE_DIRECTED_dot_cpp1_watch.html  FORCE_DIRECTED_dot_cpp_buildlog1.html  FORCE_DIRECTED_dot_cpp_buildlog4.html  FORCE_DIRECTED_dot_cpp_cpp.html  FORCE_DIRECTED_dot_cpp_emxAPI_cpp.html  FORCE_DIRECTED_dot_cpp_emxAPI_h.html  FORCE_DIRECTED_dot_cpp_emxutil_cpp.html  FORCE_DIRECTED_dot_cpp_emxutil_h.html  FORCE_DIRECTED_dot_cpp_h.html  FORCE_DIRECTED_dot_cpp_initialize_cpp.html  FORCE_DIRECTED_dot_cpp_initialize_h.html  FORCE_DIRECTED_dot_cpp_terminate_cpp.html  FORCE_DIRECTED_dot_cpp_terminate_h.html  FORCE_DIRECTED_dot_cpp_types_h.html  all_cpp.html  all_h.html  contents_file.tmp  count_children89_mcode.html  count_children89_watch.html  count_parents61_mcode.html  count_parents61_watch.html  exported_values.mat  index.html  metrics.html  rtGetInf_cpp.html  rtGetInf_h.html  rtGetNaN_cpp.html  rtGetNaN_h.html  rt_nonfinite_cpp.html  rt_nonfinite_h.html  (+9 more)
Matlab_code/codegen/mex/FORCE_DIRECTED_dot_cpp/: FORCE_DIRECTED_dot_cpp_mex.mexw64
src/: Assignment2.cpp  Assignment2.vcxproj  Assignment2.vcxproj.filters  CMakeLists.txt  Component.cpp  Component.hpp  Driver.cpp  Driver.hpp  GraphExample.txt  Operator.cpp  Operator.hpp  hlsm.cpp  hlsm.h  main.cpp  ugly.cpp  v_circuit1.v  vmodule.cpp  vmodule.h
src/test/: hls_test1.v  template.txt  template.v
src/test/if tests/: test_if1.c  test_if2.c
(+22 files in other folders)
